# neo-api-rs

./: Cargo.toml  README.md  test.rs
crates/macros/: Cargo.toml
crates/macros/src/: common.rs  from_table.rs  into_enum.rs  into_table.rs  lib.rs
src/: bridge.rs  buffer.rs  callback.rs  database.rs  debug.rs  diffuser.rs  fuzzy.rs  lib.rs  neo_api.rs  neo_api_types.rs  plugin_nui.rs  popup.rs  theme.rs  traits.rs  window.rs
src/search/: async-in-dyn-dispatch.md  buffer.rs  diffuser.rs  directory_search.rs  file_directory_search.rs  file_search.rs  fuzzy.rs  grep.rs  mod.rs  persistence.rs  preview.rs  search_state.rs
src/web_devicons/: icons_default.rs  mod.rs
