[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "neo-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { git = "https://github.com/mlua-rs/mlua", features = ["luajit", "serialize", "module", "async"] }
serde = { version = "1", features = ["serde_derive"] }
once_cell = "1"
macros = { path = "crates/macros"}
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "sync", "process", "macros", "io-std", "io-util"] }
