[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "neo-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { git = "https://github.com/mlua-rs/mlua", features = ["luajit", "module", "async"] }
once_cell = "1"
macros = { path = "crates/macros"}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "sync", "process", "macros", "io-std", "io-util", "time"] }
