[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "neo-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { git = "https://github.com/mlua-rs/mlua", features = ["luajit", "module", "async"] }
macros = { path = "crates/macros"}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "sync", "process", "macros", "io-std", "io-util", "time"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
futures = "0.3"
